# search_engine

./: .gitignore  CMakeLists.txt  README.md  config.json  requests.json
Source/: CMakeLists.txt  ConverterJSON.cpp  main.cpp
include/: ConverterJSON.h  converter_json.h  file_exception.h  functions.h  functions_for_ConverterJSON.h  functions_for_converter_json.h  functions_for_search_server.h  functions_for_work_with_files.h  general_functions.h  initial_tests.h  inverted_index.h  search_server.h
nlohmann_json/: CMakeLists.txt
nlohmann_json/.github/workflows/: dependency-review.yml
resources/: file002.txt  file003.txt  file004.txt  incorrectWord.txt  manyWords.txt  word_longer_100_char.txt
src/: CMakeLists.txt  ConverterJSON.cpp  converter_json.cpp  functions_for_ConverterJSON.cpp  functions_for_converter_json.cpp  functions_for_search_server.cpp  functions_for_work_with_files.cpp  general_functions.cpp  inverted_index.cpp  search_engine.cpp  search_server.cpp
tests/: CMakeLists.txt  test_search_engine.cpp
tests/test_search_server/: CMakeLists.txt  test_search_server.cpp
tests/tests_inverted_index/: CMakeLists.txt  test_inverted_index.cpp
